--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,12 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "start": "node backend/server.js",
-    "build:frontend": "cd frontend && npm run build",
-    "dev:frontend": "cd frontend && npm run dev",
-    "dev:backend": "nodemon backend/server.js"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonschema": "^1.4.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^3.0.2"
   }
 }
